--- a/frontend/index.html
+++ b/frontend/index.html
@@ -415,7 +415,7 @@
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        analysis_id: currentFileHash,
+                        file_hash: currentFileHash,
                         mode: mode
                     })
                 });
