--- a/frontend/index.html
+++ b/frontend/index.html
@@ -378,12 +378,55 @@
         .btn-secondary:hover {
             background: #777;
         }
+
+        .btn-danger {
+            background: #d32f2f;
+        }
+
+        .btn-danger:hover {
+            background: #b71c1c;
+        }
+
+        .header-controls {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .delete-btn {
+            display: none;
+            background: #d32f2f;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 0.95em;
+            transition: all 0.3s;
+        }
+
+        .delete-btn:hover {
+            background: #b71c1c;
+            transform: translateY(-1px);
+        }
+
+        .delete-btn:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+            transform: none;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>PCAP LLM Analyzer</h1>
-        <p class="subtitle">Upload and analyze network traffic captures with AI-powered insights</p>
+        <div class="header-controls">
+            <div>
+                <h1>PCAP LLM Analyzer</h1>
+                <p class="subtitle">Upload and analyze network traffic captures with AI-powered insights</p>
+            </div>
+            <button class="delete-btn" id="deleteBtn">Delete All Data</button>
+        </div>
 
         <div class="section">
             <h2>Step 1: Upload PCAP File</h2>
@@ -475,6 +518,7 @@
         const chatInput = document.getElementById('chatInput');
         const sendBtn = document.getElementById('sendBtn');
         const statsSection = document.getElementById('statsSection');
+        const deleteBtn = document.getElementById('deleteBtn');
 
         uploadZone.addEventListener('click', () => fileInput.click());
 
@@ -520,6 +564,7 @@
                         currentFileHash = result.file_hash;
                         currentAnalysisId = result.analysis_id;
                         showReanalyzeModal();
+                        showDeleteButton();
                     } else {
                         uploadStatus.innerHTML = `<div class="status-box success">File uploaded successfully: ${result.filename}</div>`;
                         currentFileHash = result.file_hash;
@@ -577,6 +622,7 @@
                 if (response.ok) {
                     currentAnalysisId = result.analysis_id;
                     currentMode = result.mode || mode;
+                    showDeleteButton();
 
                     if (result.status === 'ready') {
                         analysisStatus.innerHTML = `<div class="status-box success">${result.message}</div>`;
@@ -645,8 +691,8 @@
                 const result = await response.json();
 
                 currentMode = result.current_mode || result.mode;
+                showDeleteButton();
 
-                // Update mode selector to reflect current mode
                 const modeRadios = document.querySelectorAll('input[name="mode"]');
                 modeRadios.forEach(radio => {
                     if (radio.value === currentMode) {
@@ -771,6 +817,75 @@
             statsSection.classList.add('hidden');
             chatContainer.style.display = 'none';
         }
+
+        deleteBtn.addEventListener('click', () => {
+            if (currentAnalysisId) {
+                showDeleteModal();
+            }
+        });
+
+        function showDeleteModal() {
+            const modal = document.getElementById('deleteModal');
+            modal.style.display = 'block';
+        }
+
+        function closeDeleteModal() {
+            const modal = document.getElementById('deleteModal');
+            modal.style.display = 'none';
+        }
+
+        async function confirmDelete() {
+            if (!currentAnalysisId) {
+                closeDeleteModal();
+                return;
+            }
+
+            closeDeleteModal();
+            deleteBtn.disabled = true;
+            deleteBtn.textContent = 'Deleting...';
+
+            try {
+                const response = await fetch(`/analysis/${currentAnalysisId}`, {
+                    method: 'DELETE'
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    uploadStatus.innerHTML = '<div class="status-box success">All data deleted successfully. You can upload a new file.</div>';
+
+                    currentAnalysisId = null;
+                    currentFileHash = null;
+                    currentMode = null;
+
+                    analysisSection.style.display = 'none';
+                    statsSection.classList.add('hidden');
+                    chatContainer.style.display = 'none';
+                    chatMessages.innerHTML = '';
+                    fileInput.value = '';
+
+                    deleteBtn.style.display = 'none';
+                    deleteBtn.disabled = false;
+                    deleteBtn.textContent = 'Delete All Data';
+                } else {
+                    uploadStatus.innerHTML = `<div class="status-box error">Failed to delete: ${result.detail || 'Unknown error'}</div>`;
+                    deleteBtn.disabled = false;
+                    deleteBtn.textContent = 'Delete All Data';
+                }
+            } catch (error) {
+                uploadStatus.innerHTML = `<div class="status-box error">Error during deletion: ${error.message}</div>`;
+                deleteBtn.disabled = false;
+                deleteBtn.textContent = 'Delete All Data';
+            }
+        }
+
+        function showDeleteButton() {
+            deleteBtn.style.display = 'block';
+        }
+
+        function hideDeleteButton() {
+            deleteBtn.style.display = 'none';
+        }
     </script>
 
     <div id="reanalyzeModal" class="modal">
@@ -785,6 +900,30 @@
                 <button class="btn btn-secondary" onclick="closeReanalyzeModal()">Cancel</button>
                 <button class="btn" onclick="loadExisting()">Load Existing</button>
                 <button class="btn" onclick="startReanalysis()">Re-analyze</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="deleteModal" class="modal">
+        <div class="modal-content">
+            <h2 style="margin-bottom: 20px; color: #d32f2f;">Delete All Data</h2>
+            <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">
+                <strong>Warning:</strong> This action cannot be undone!
+            </p>
+            <p style="color: #666; line-height: 1.6;">This will permanently delete:</p>
+            <ul style="color: #666; margin: 15px 0; padding-left: 20px;">
+                <li>Current analysis and all results</li>
+                <li>All chat history</li>
+                <li>Vector database embeddings</li>
+                <li>Uploaded PCAP file</li>
+                <li>All generated JSON files</li>
+            </ul>
+            <p style="color: #d32f2f; font-weight: bold; margin-top: 15px;">
+                Are you sure you want to proceed?
+            </p>
+            <div class="modal-buttons">
+                <button class="btn btn-secondary" onclick="closeDeleteModal()">Cancel</button>
+                <button class="btn btn-danger" onclick="confirmDelete()">Delete Everything</button>
             </div>
         </div>
     </div>
